2008-08-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-jpeg/jpeg.[ch]
	* plug-ins/file-jpeg/jpeg-load.[ch]
	* plug-ins/file-jpeg/jpeg-save.[ch]: pass error messages with the
	return values instead of calling g_message().

2008-08-20  Sven Neumann  <sven@gimp.org>

	* app/file/file-save.c (file_save): flush the image when done to
	cause the actions to be updated (in particular File->Revert).

2008-08-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-ico/ico-save.c: create GHashTable with destroy
	notifiers.

2008-08-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-faxg3/faxg3.c
	* plug-ins/file-ico/ico.c
	* plug-ins/file-ico/ico-load.[ch]
	* plug-ins/file-ico/ico-save.[ch]: pass error messages with the
	return values instead of calling g_message().

2008-08-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-guides.c (gimp_image_find_guide): find guides
	outside the image as well. This complements the change that we
	also draw guides outside the image now.

2008-08-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpgegltool.c (gimp_gegl_tool_dialog): formatting.

2008-08-19  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin.[ch] (struct GimpPlugIn)
	* app/plug-in/gimppluginprocframe.[ch] (struct GimpPlugInProcFrame):
	move the error_handler from the plug-in to the proc-frame.

	* app/plug-in/gimpplugin.c
	* app/plug-in/gimpplugin-message.c: changed accordingly.

2008-08-19  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbase.def
	* libgimp/gimp.def: added new symbols.

2008-08-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-bmp/bmp.[ch]
	* plug-ins/file-bmp/bmp-read.c
	* plug-ins/file-bmp/bmp-write.c: for most errors, pass the error
	message with the return values instead of calling g_message().

2008-08-19  Sven Neumann  <sven@gimp.org>

	Complements the fix for bug #344818:

	* libgimpbase/gimpbaseenums.[ch]: added new enum GimpPDBErrorHandler.

	* tools/pdbgen/enums.pl: regenerated.
