@@ -1,5 +1,13 @@
 2008-08-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/file-psd/psd.c
+	* plug-ins/file-psd/psd-load.[ch]
+	* plug-ins/file-psd/psd-save.c 
+	* plug-ins/file-psd/psd-thumb-load.[ch]: pass error messages with
+	the return values instead of calling g_message().
+
+2008-08-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/file-jpeg/jpeg.[ch]
 	* plug-ins/file-jpeg/jpeg-load.[ch]
 	* plug-ins/file-jpeg/jpeg-save.[ch]: pass error messages with the
